# MapReduce

./: CMakeLists.txt  initialize.sh  main.cpp  parameters.md  readme.md
Nodes/: CMakeLists.txt  Node.cpp  Node.h
Nodes/Master/: CMakeLists.txt  masterNode.cpp  masterNode.h
Nodes/Worker/: CMakeLists.txt  Worker.cpp  Worker.h  initialize.sh  mapper_.cpp
Nodes/Worker/Mapper/: Mapper.cpp  Mapper.h
protofiles/: gRPC_Communication.proto
